# notsofast

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GAMEPLAN.md  PAPER.docx  PAPER.html  PAPER.md  README.md  SECURITY.md  VALIDATION-REPORT.md  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
benchmark/: README.md  REPORT.md  metrics.py  run.py  run_real_cli.py  test_benchmark.py
benchmark/arms/: __init__.py  base.py  cli_adapter.py  mock.py  real_adapter.py
benchmark/dataset/: __init__.py  checkers.py  items.py
benchmark/results/: nsf-bench-real-seed20260626-20260708T025434Z.json  pilot-mock-latest.json  real-cli-wiring-status.json
daily/: DAY-01.md  DAY-02.md  DAY-03.md
publish/: BRANDING-SPEC.md  README.md
publish/assets/: preview.html
reference/: CONTRACT.md
scripts/: adequacy_gate.py  test_adequacy_gate.py
skill/: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
skill/.claude-plugin/: plugin.json
skill/.github/workflows/: ci.yml
skill/publish/: README.md
skill/skills/third-umpire/reference/: USE-CASES.md
skill/skills/third-umpire/study/: run_study.py  study_results.json
skills/notsofast/: SKILL.md
skills/notsofast/examples/: quickstart.py
skills/notsofast/reference/: CONTRACT.md  USE-CASES.md
skills/notsofast/scripts/: notsofast.py  test_notsofast.py  test_notsofast_rigorous.py
skills/notsofast/study/: STUDY.md  flow_diagram.py  run_study.py  study_results.json
skills/third-umpire/: SKILL.md
skills/third-umpire/examples/: quickstart.py
skills/third-umpire/reference/: CONTRACT.md  USE-CASES.md
skills/third-umpire/scripts/: test_third_umpire.py  test_third_umpire_rigorous.py  third_umpire.py
skills/third-umpire/study/: STUDY.md  flow_diagram.py  run_study.py
skills/verification-adequacy/: SKILL.md
skills/verification-adequacy/examples/: quickstart.py
skills/verification-adequacy/reference/: USE-CASES.md
skills/verification-adequacy/scripts/verification_adequacy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
